# website-tracker

./: README.md  pyproject.toml
tests/: sites.toml
website-tracker/: .gitignore  main.py  pyproject.toml
website-tracker/website_tracker/: main.py
