[project]
name = "website-tracker"
version = "0.1.0"
description = "Tracks changes on a list of websites."
authors = ["Pavel Dusek <pavel.dusek@gmail.com>"]
readme = "README.md"
license = "GNU GPL-3.0"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "toml>=0.10.2",
]
