[tool.poetry]
name = "website-tracker"
version = "0.1.0"
description = ""
authors = ["Pavel Dusek <pavel.dusek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
rich = "^13.9.4"
toml = "^0.10.2"
icecream = "^2.1.4"
beautifulsoup4 = "^4.13.3"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
